crates/synapse-core/tests/snapshots/profile_types__hud_extractor_round_trip.snap
---
source: crates/synapse-core/tests/profile_types.rs
expression: "round_trip(\"HudExtractor\", \"snapshot\", full_extractor())?"
---
{
  "kind": "template_match",
  "templates": [
    "hearts/full.png",
    "hearts/half.png",
    "hearts/empty.png"
  ]
}
