crates/synapse-core/tests/snapshots/profile_types__hud_field_spec_round_trip.snap
---
source: crates/synapse-core/tests/profile_types.rs
expression: "round_trip(\"HudFieldSpec\", \"snapshot\", full_hud_field())?"
---
{
  "name": "hp_hearts",
  "region": {
    "kind": "anchored_to_edge",
    "edge": "bottom_left",
    "x_offset": 220,
    "y_offset": -50,
    "w": 180,
    "h": 18
  },
  "extractor": {
    "kind": "template_match",
    "templates": [
      "hearts/full.png",
      "hearts/half.png",
      "hearts/empty.png"
    ]
  },
  "parser": {
    "kind": "regex",
    "pattern": "([0-9]+)/[0-9]+",
    "group": 1
  },
  "confidence_threshold": 0.85
}
