crates/synapse-core/tests/snapshots/profile_types__profile_backends_round_trip.snap
---
source: crates/synapse-core/tests/profile_types.rs
expression: "round_trip(\"ProfileBackends\", \"snapshot\", mixed_backends())?"
---
{
  "default": "auto",
  "keyboard_default": "software",
  "mouse_default": "hardware",
  "pad_default": "vigem"
}
