crates/synapse-core/tests/snapshots/profile_types__profile_capture_round_trip.snap
---
source: crates/synapse-core/tests/profile_types.rs
expression: "round_trip(\"ProfileCapture\", \"snapshot\", monitor_index_capture(2))?"
---
{
  "target": {
    "kind": "monitor_index",
    "index": 2
  },
  "min_update_interval_ms": 16,
  "cursor_visible": false
}
