crates/synapse-core/tests/snapshots/profile_types__profile_capture_target_round_trip.snap
---
source: crates/synapse-core/tests/profile_types.rs
expression: "round_trip(\"ProfileCaptureTarget\", \"snapshot\",\nProfileCaptureTarget::MonitorIndex { index: 2 },)?"
---
{
  "kind": "monitor_index",
  "index": 2
}
