crates/synapse-core/tests/snapshots/profile_types__profile_ocr_round_trip.snap
---
source: crates/synapse-core/tests/profile_types.rs
expression: "round_trip(\"ProfileOcr\", \"snapshot\", full_ocr())?"
---
{
  "default_backend": "crnn",
  "regions": [
    {
      "kind": "anchored_to_edge",
      "edge": "bottom_left",
      "x_offset": 220,
      "y_offset": -50,
      "w": 180,
      "h": 18
    }
  ],
  "parser_config": {
    "language": "en",
    "normalize_whitespace": "true"
  }
}
