crates/synapse-core/tests/snapshots/profile_types__profile_round_trip.snap
---
source: crates/synapse-core/tests/profile_types.rs
expression: "round_trip(\"Profile\", \"snapshot\", full_profile())?"
---
{
  "id": "minecraft.java",
  "label": "Minecraft Java Edition",
  "version": "1.0.0",
  "use_scope": "single_player",
  "matches": [
    {
      "exe": "javaw.exe",
      "title_regex": "Minecraft\\* [0-9]",
      "steam_appid": 12345,
      "window_class": "LWJGL",
      "process_args": [
        "--demo"
      ]
    }
  ],
  "mode": "pixel_only",
  "capture": {
    "target": {
      "kind": "monitor_index",
      "index": 1
    },
    "min_update_interval_ms": 16,
    "cursor_visible": false
  },
  "detection": {
    "model_id": "yolov10n_general",
    "classes_of_interest": [
      "player",
      "creeper"
    ],
    "confidence_threshold": 0.45,
    "max_detections": 32
  },
  "ocr": {
    "default_backend": "crnn",
    "regions": [
      {
        "kind": "anchored_to_edge",
        "edge": "bottom_left",
        "x_offset": 220,
        "y_offset": -50,
        "w": 180,
        "h": 18
      }
    ],
    "parser_config": {
      "language": "en",
      "normalize_whitespace": "true"
    }
  },
  "hud": [
    {
      "name": "hp_hearts",
      "region": {
        "kind": "anchored_to_edge",
        "edge": "bottom_left",
        "x_offset": 220,
        "y_offset": -50,
        "w": 180,
        "h": 18
      },
      "extractor": {
        "kind": "template_match",
        "templates": [
          "hearts/full.png",
          "hearts/half.png",
          "hearts/empty.png"
        ]
      },
      "parser": {
        "kind": "regex",
        "pattern": "([0-9]+)/[0-9]+",
        "group": 1
      },
      "confidence_threshold": 0.85
    }
  ],
  "keymap": {
    "attack": "lmb",
    "inventory": "e"
  },
  "backends": {
    "default": "auto",
    "keyboard_default": "software",
    "mouse_default": "hardware",
    "pad_default": "vigem"
  },
  "metadata": {
    "benchmark_id": "minecraft.java"
  },
  "event_extensions": [
    {
      "name": "creeper_nearby",
      "from_filter": {
        "op": "and",
        "args": [
          {
            "op": "kind",
            "kind": "entity-appeared"
          },
          {
            "op": "data",
            "path": "/class_label",
            "predicate": {
              "op": "eq",
              "value": "creeper"
            }
          },
          {
            "op": "data",
            "path": "/bbox/w",
            "predicate": {
              "op": "gt",
              "value": 80
            }
          }
        ]
      },
      "emits_kind": "creeper-imminent"
    }
  ]
}
